--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trav//guild",
+  "name": "tenno's-guild-command",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,6 +14,8 @@
     "@angular/compiler": "^21.1.0",
     "@angular/platform-browser": "^21.1.0",
     "@angular/common": "^21.1.0",
+    "@angular/forms": "^21.1.3",
+    "@google/genai": "latest",
     "@angular/build": "^21.1.0",
     "@angular/cli": "^21.1.0",
     "@angular/compiler-cli": "^21.1.0",
